package edu.fiuba.algo3.Enemies;

import edu.fiuba.algo3.Enemies.Placeable;

public interface Advanceable extends Placeable {
    void advance();
}
