package edu.fiuba.algo3.Enemies;

import edu.fiuba.algo3.Players.Looter;

public interface Looteable {

    void transferLootTo( Looter player );
}
